# stratus-web

./: .gitignore  .nano-banana-config.json  ARCHITECTURE.md  BRAND.md  CLAUDE.md  COFOUNDER-MALEK.md  COFOUNDER-PROPOSAL.md  DESIGN-MOBILE.md  DESIGN.md  NEW-SITE.md  idea.md
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt  supabase_migration_brief.sql  supabase_migration_brief_patch.sql  supabase_migration_linkedin.sql  supabase_migration_linkedin_memory.sql  supabase_migration_stripe_clients.sql  supabase_migration_telegram.sql
backend/app/: config.py  dependencies.py  exceptions.py  main.py
backend/app/agents/: base.py  human_feel.py  memory.py  onboarding.py  registry.py
backend/app/api/: admin.py  agents.py  auth.py  chat.py  health.py  linkedin.py  marketplace.py  subscriptions.py  telegram_webhook.py  waitlist.py  webhooks.py  whatsapp_webhook.py
backend/app/db/: connection.py  migrations.sql  seed.py
backend/app/repositories/: agents.py  chat.py  logs.py  print3d_jobs.py  profiles.py  schedules.py  subscriptions.py
backend/app/schemas/: agents.py  chat.py  common.py  logs.py  subscriptions.py  users.py
backend/app/services/: agent_service.py  auth_service.py  client_subscription_service.py  context_builder.py  stripe_service.py  subscription_service.py
backend/app/telegram/: client.py
backend/app/whatsapp/: client.py
backend/migrations/: print3d_jobs.sql
backend/tests/: conftest.py  test_brief_agent.py  test_health.py  test_linkedin_agent.py  test_post_generator.py  test_research.py  test_share_link.py
web/: package.json  (+4 more)
(+169 files in other folders)
