[project]
name = "stratus-backend"
version = "0.1.0"
description = "Stratus AI workforce platform — FastAPI backend"
requires-python = ">=3.11"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
